src/styles/home.css
/* body styling */

.home_div {
  position: relative;
  background-color: #d0230d;
  height: auto;
  width: 100vw;
}

/* header styling */

header {
  /* background-color: #d0230d; */
  color: white;
  height: 58px;
  letter-spacing: 0.3px;
}

.header_div {
  z-index: 6;
  background-color: #d0230d;
  position: relative;
}

#h1 {
  font-weight: 700;
  font-size: 20px;
  font-family: "Inter", sans-serif;
  margin: 0;
}

.header_phone_number {
  font-size: 25px;
  font-weight: 700;
  font-family: "Inter", sans-serif;
  color: white;
  text-decoration: none;
}

#mobileHeadingH2 {
  display: none;
}

.phone_icon {
  font-size: 18px;
  margin-right: 12px;
}

.phone_number_div {
  /* padding: 10px; */
  margin-right: 5px;
  /* width: 226px; */
  height: 50px;
}

.h1_div {
  margin-left: 121px;
}

/* Navbar styling */

.navlinks {
  width: 443px;
}

.nav-link {
  color: white !important;
}

.navbar {
  z-index: 5;
}

/* logo styling */

.logo {
  object-fit: cover;
  object-position: 125%;
  width: 95px;
  height: 95px;
  margin-top: -10px;
}

.image_div {
  width: 70px;
  height: 70px;
  overflow: hidden;
  border-radius: 50%;
  object-position: 75% 0;
  border: 4px solid white;
  position: absolute;
  top: 17px;
  left: 33px;
  z-index: 6;
}

/* SafeStorage component styling */

.safeStorage {
  background-color: white;
  height: 332px;
  width: auto;
  margin-left: 15px;
  position: relative;
  overflow: hidden;
}

.hope_storage_mobile_heading {
  display: none;
}

.safeStorage_heading_div {
  position: relative;
  left: 91px;
  top: 68px;
  width: 393px;
}

.safeStorage_heading_div h2 {
  font-family: "Inter", sans-serif;
  font-weight: 700;
  font-size: 50px;
}

.outerDivBottomLeftCorner {
  position: relative;
  background-color: pink;
  z-index: 999;
}

.contactBtnDiv {
  position: relative;
  left: 91px;
  top: 80px;
}

.contactBtnDiv input {
  width: 168px;
  height: 48px;
  border-radius: 100px;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  background-color: #d0230d;
  color: white;
  border: none;
  text-align: center;
  /* font-family: "Roboto", sans-serif; */
  font-family: "Nunito", sans-serif;

  font-size: 18px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px; /* 83.333% */
  letter-spacing: 0.1px;
  transition: 0.3s;
}

.contactBtnDiv button:hover {
  background-color: #a91f0c;
}

.caravanImgDiv {
  height: 427px;
  width: 635px;
  overflow: hidden;
  /* object-position: 75% 0; */
  position: absolute;
  top: -70px;
  right: -100px;
  border-radius: 1800px 0px 0px 800px;
  z-index: 1;
}

.caravanImg {
  object-fit: cover;
  object-position: 35%;
  width: 900px;
  height: 900px;
  margin-top: -300px;
}

.bottomLeftCorner {
  height: 120px;
  width: 120px;
  z-index: 99999;
  background-color: green;
  position: absolute;
  top: 282px;
  border-radius: 80px 0 0 320px;
  left: 18px;
}

/* Mobile caravan div styling */

.mobile_caravan_img_div {
  display: none;
}

/* WhatWeOffer styling */

.whatWeOfferDiv {
  background-color: black;
  position: relative;
  color: white;
  height: 489px;
  width: auto;
  margin-left: 15px;
  position: relative;
  z-index: 2;
}

.whatWeOfferDiv h2 {
  color: #fff;
  text-align: center;
  font-family: "Inter", sans-serif;
  font-size: 30px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  position: relative;
  top: 56px;
}

.carouselDiv {
  overflow: hidden;
}

.carousel_position_1 {
  left: 0%;
  display: flex;
  width: max-content;
  position: relative;
  transition: 0.6s;
}

.carousel_position_2 {
  left: -33%;
  display: flex;
  width: max-content;
  position: relative;
  transition: 0.6s;
}
.carousel_position_3 {
  left: -66.5%;
  display: flex;
  width: max-content;
  position: relative;
  transition: 0.6s;
}

.carousel_containers {
  /* border: 1px solid red; */
  background: black;
  width: 32.5vw;
  height: 330px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.carousel_inner_containers {
  background-color: rgb(38, 38, 38);
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 85%;
  height: 85%;
  border-radius: 5px;
}

.carouselDiv {
  margin-top: 90px;
}

.carousel_arrows {
  color: #777777;
  position: absolute;
  font-size: 3em;
  top: 35%;
}

.icons {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 2em;
}

.left_arrow {
  left: 3%;
  z-index: 99;
}

.right_arrow {
  right: 2%;
  z-index: 99;
}

.btn-slide {
  height: 38px;
  width: 45px;
  position: relative;
  top: 38px;
  background-color: rgba(250, 235, 215, 0);
  border: none;
}

.arrow_img {
  top: -27px;
  left: -10px;
  position: relative;
  color: #959595;
  transition: 0.3s;
  font-size: 32px;
}

.arrow_img:hover {
  color: #ececec;
}

/* Need to margin left -32.5vw for each click */
/* Need to left nd right arrows
Need 5 circles at the bottom */

/* HowItWorks styling */

.howItWorksDiv {
  background-color: white;
  height: 489px;
  width: auto;
  margin-left: 15px;
  position: relative;
  z-index: 2;
  text-align: center;
  padding-top: 45px;
}

.howItWorksDiv h2 {
  color: #000000;

  font-family: "Inter", sans-serif;
  font-size: 30px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  position: relative;
}

.howItWorksDiv h3 {
  font-family: Inter;
  font-size: 24px;
  font-weight: 600;
  line-height: 29px;
  letter-spacing: 0em;
}

.howItWorksDiv p {
  font-family: "Nunito", sans-serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0em;
}

.howItWorksImgDiv {
  width: 250px;
}

.howItWorksImgContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding: 30px 120px 0 120px;
}

.howItWorksImages {
  width: 250px;
  height: 220px;
  object-fit: cover;
  border-radius: 20px;
  margin-bottom: 17px;
}

/* Red banner styling */

.redBanner {
  height: 124px;
  /* width: auto; */
  display: flex;
  align-items: center;
}

.redBanner h2 {
  padding-left: 90px;
  color: white;
  font-family: Roboto;
  font-size: 35px;
  font-weight: 300;
  line-height: 41px;
  letter-spacing: 0em;
  text-align: center;
}

/* Footer banner image styling */
.footerBanner {
  margin-left: 15px;
  height: 285px;
  width: 100%;
}

.footerBannerImg {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 0 48%;
}

/* Contact info styling */

.contactInfo {
  height: 519px;
  background: black;
  display: flex;
  justify-content: space-around;
  align-items: center;
  color: white;
  text-align: center;
}

.sendMessageFormDiv {
  text-align: left;
  background: black;
  color: white;
  width: 293px;
  height: 404px;
}

.sendMessageFormDiv h3 {
  font-family: Inter;
  font-size: 30px;
  font-weight: 700;
  line-height: 36px;
  letter-spacing: 0em;
  text-align: center;
}

.sendMessageFormDiv input {
  width: 100%;
  height: 56px;
  border: 2px solid rgb(123, 123, 123);
  border-radius: 4px;
  margin-bottom: 10px;
  background-color: #00000000;
  color: white;
  padding-left: 20px;
}

::placeholder {
  color: white;
  font-family: Roboto;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0.5px;
  text-align: left;
}

.sendMessageFormDiv .sendBtn {
  padding: 0;
  width: 293px;
  height: 40px;
  border-radius: 100px;
  border: none;
  background-color: rgb(201, 0, 0);
  color: white;
  font-family: "Nunito", sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.10000000149011612px;
  text-align: center;
  transition: 0.3s;
}

.sendMessageFormDiv .sendBtn:hover {
  color: white;
  background-color: rgb(80, 0, 0);
}

input::placeholder {
  color: white !important;
}

.mapDiv {
  width: 350px;
}

.mapImg {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.findUsDiv {
  width: 277px;
}

.findUsDiv h2 {
  font-family: Inter;
  font-size: 25px;
  font-weight: 700;
  line-height: 30px;
  letter-spacing: 0em;
  margin-bottom: 38px;
}

.findUsDiv p {
  font-family: "Nunito", sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 22px;
  letter-spacing: 0em;
  text-align: center;
}

.findUsDiv p a {
  color: white;
  text-decoration: none;
}

/* Footer info */
.footer {
  height: 57px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer p {
  color: white;
  font-family: Inter;
  font-size: 13px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0em;
  text-align: center;
  margin-bottom: 0;
}

/* Map styling */

.map-div {
  height: 350px;
  width: 350px;
}

.map-container {
  height: 100%;
  width: 100%;
}

/* Media queries */

@media screen and (max-width: 1030px) {
  .caravanImg {
    display: none;
  }
  .howItWorksImgContainer {
    padding-left: 0;
    padding-right: 0;
  }

  .contactInfo {
    flex-direction: column;
    height: auto;
  }

  .contactInfo > div {
    padding: 20px;
  }

  .map-div {
    height: 250px;
    width: 100%;
  }
}

@media screen and (max-width: 800px) {
  /* Add the What we offer responsiveness here 800px */

  .carousel_position_1 {
    left: 6%;
  }

  .carousel_position_2 {
    left: -79%;
  }

  .carousel_position_3 {
    left: -163.5%;
  }

  .carousel_position_4 {
    left: -248.5%;
    display: flex;
    width: max-content;
    position: relative;
    transition: 0.6s;
  }

  .carousel_position_5 {
    left: -333.5%;
    display: flex;
    width: max-content;
    position: relative;
    transition: 0.6s;
  }

  .carousel_containers {
    background: black;
    width: 85vw;
  }

  .howItWorksImgContainer {
    flex-direction: column;
  }
  .howItWorksImgDiv {
    display: flex;
    text-align: left;
  }

  .howItWorksDiv {
    height: auto;
    padding-left: 30px;
  }

  .howItWorksImageInnerDiv {
    margin-right: 25px;
  }
  .howItWorksImgDiv {
    width: 500px;
  }

  .redBanner {
    display: none;
  }

  .footerBanner {
    display: none;
  }

  .mapDiv {
    margin-top: 40px;
    height: 300px;
  }
}

@media screen and (max-width: 650px) {
  h1,
  .logo,
  .image_div {
    display: none;
  }
  .safeStorage,
  .whatWeOfferDiv {
    margin-left: 0;
  }

  .hope_storage_mobile_heading {
    display: block;
    position: relative;
    font-style: italic;
    font-weight: 600;
    font-size: 28px;
    width: 100vw;
    height: 55px;
    padding-top: 3px;
    background-color: lightgrey;
    padding-left: 40px;
  }

  .header_phone_number {
    font-size: 18px;
  }

  #mobileHeadingH2 {
    display: block;
    font-size: 23px;
    margin: 0;
  }

  /* .phone_number_div {
    width: 180px;
  } */

  .mobileHeading {
    position: absolute;
    left: calc(50% - 73px);
  }

  .mobile_caravan_img_div {
    display: block;
    width: 100vw;
    overflow: hidden;
  }

  .mobile_caravan_img {
    width: 300px;
    height: 245px;
    object-fit: cover;
    transform: scale(3.5);
    object-position: 69px -28px;
  }

  .whatWeOfferDiv {
    margin-left: 0;
  }

  .howItWorksDiv {
    margin-left: 0;
  }

  .howItWorksImgDiv {
    width: auto;
    padding-right: 15px;
  }

  .howItWorksImages {
    width: 170px;
    height: 165px;
  }

  .safeStorage_heading_div {
    width: 100vw;
  }

  .safeStorage_heading_div > h2 {
    font-size: 38px;
  }

  .findUsDiv p {
    font-size: 15px;
  }

  .safeStorage_heading_div,
  .contactBtnDiv {
    left: 40px;
  }
}

